<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LunarWolf Market</string>

    <string-array name="productIds">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>
    <string-array name="productDes" formatted="false">
        <item>camiseta hombre 100%licra, deportiva</item>
        <item>camiseta hombre 100%licra, sin mangas</item>
        <item>camiseta mujer 100%licra, cuello en V</item>
        <item>camiseta mujer cuello redondo 100% algodón</item>
        <item>camiseta mujer cuello V 100% algodón</item>
        <item>chompas con capucha hombre</item>
        <item>chompas con cierre sin capucha mujer</item>
        <item>buzos 100% algodón </item>
        <item>camisetas sin manga hombres </item>
        <item>camisa sin manga con capuchas </item>
        <item>gorras</item>
        <item>gorras</item>
        <item>boxer</item>
    </string-array>
    <string-array name="productPrices">
        <item>15.00</item>
        <item>14.00</item>
        <item>14.00</item>
        <item>12.00</item>
        <item>22.00</item>
        <item>15.00</item>
        <item>18.00</item>
        <item>15.00</item>
        <item>18.00</item>
        <item>15.00</item>
        <item>8.00</item>
        <item>8.00</item>
        <item>8.00</item>
    </string-array>
    <string-array name="productSmallSizes">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>
    <string-array name="productMediumSizes">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>
    <string-array name="productLargeSizes">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>
    <string-array name="productExtraLargeSizes">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>
    <string-array name="productPhotoNames">
        <item>cam_1</item>
        <item>cam_6</item>
        <item>cam_7</item>
        <item>cam_12</item>
        <item>cam_13</item>
        <item>cho_4</item>
        <item>cho_7</item>
        <item>buz_2</item>
        <item>buz_6</item>
        <item>buz_10</item>
        <item>gor_3</item>
        <item>gor_5</item>
        <item>box_9</item>
    </string-array>
    <string-array name="productBlack">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>
    <string-array name="productRed">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>
    <string-array name="productBlue">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_catalog">LunarWolf Market</string>
    <string name="title_activity_product_detail">Comprar</string>
    <string name="actualPurchase">COMPRA ACTUAL %1$s</string>
    <string name="extraLarge">Extra Large</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="title_activity_shopping_cart">Pedido</string>
    <string name="incorrectAmount">La cantidad ingresada es incorrecta</string>
    <string name="itemAdded">Agregado</string>
    <string name="enterAmount">Ingrese la cantidad</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="yourBrand">Tu marca de camisetas divertidas</string>
    <string name="OK">OK</string>
    <string name="title_activity_contact_form">Pedido</string>
    <string name="contactInformation">Información de Contacto</string>
    <string name="names">Nombres</string>
    <string name="address">Dirección</string>
    <string name="mobile">Teléfono celular</string>
    <string name="email">Correo electrónico</string>
    <string name="enviar">ENVIAR</string>
    <string name="theBillIs">La cuenta es</string>
    <string name="iva12">I.V.A. 12%</string>
    <string name="total">TOTAL</string>
    <string name="chargeAmount">Cobrar $0.00</string>
    <string name="sorryOrderCouldntSend">Discúlpenos, no hemos podido enviar su pedido</string>
    <string name="orderSentsuccessfully">Enviado exitosamente!</string>
    <string name="order">Pedido</string>
    <string name="processing">Enviando</string>
    <string name="pleaseWait">Por favor espere...</string>
    <string name="noValidName">El nombre ingresado es incorrecto</string>
    <string name="noValidAddress">La dirección ingresada es incorrecta</string>
    <string name="novalidPhone">El teléfono ingresado es incorrecto</string>
    <string name="novalidEmail">EL correo ingresado es incorrecto</string>
    <string name="noNetwork">No existe conección a Internet</string>
    <string name="lwAddress">Cdla. Albornor</string>
    <string name="telephone">Teléfono</string>
    <string name="lwTelephone">042-323243</string>
    <string name="facebook">Facebook</string>
    <string name="lwFabebook">\@LunarWolf</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="title_activity_contact">Contacto</string>
    <string name="facebookPage">https://www.facebook.com/pages/LUNAR-WOLF/714538508662025?fref=ts</string>
    <string name="twitterPage">https://twitter.com/almohadaso</string>
    <string name="instagramPage">https://instagram.com/joseph.jiy/</string>
    <string name="contact">Contacto</string>

</resources>
