<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lunarwolf.market.view.ContactFormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin">

        <TextView
            android:text="@string/contactInformation"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="@dimen/bigTextSize"
            android:id="@+id/header"
            style="@style/TextViewCommom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/header"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:textSize="@dimen/normalTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/names"
                android:inputType="text"
                android:layout_marginTop="@dimen/margin"/>

            <EditText
                android:textSize="@dimen/normalTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:layout_marginTop="@dimen/margin"/>

            <EditText
                android:textSize="@dimen/normalTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:layout_marginTop="@dimen/margin"/>

            <EditText
                android:textSize="@dimen/normalTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/margin"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>