<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="com.datil.pos.view.CartActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/bigTextSize"
                    android:gravity="center"
                    android:text="@string/theBillIs"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"/>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/itemsList">

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/taxes"
                android:paddingLeft="@dimen/margin"
                android:paddingRight="@dimen/margin">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:id="@+id/labelTax"
                    android:textSize="@dimen/normalTextSize"
                    android:text="@string/iva12"
                    style="@style/TextViewCommom"/>

                <TextView
                    android:layout_alignTop="@id/labelTax"
                    android:id="@+id/ivaTax"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:text="$0.00"
                    style="@style/TextViewCommom"/>

            </RelativeLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/total"
                android:paddingLeft="@dimen/margin"
                android:paddingRight="@dimen/margin"
                android:layout_marginTop="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/totalLabel"
                    android:layout_marginTop="15dp"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    style="@style/TextViewCommom"/>

                <TextView
                    android:textSize="@dimen/bigTextSize"
                    android:id="@+id/totalBill"
                    android:textStyle="bold"
                    android:gravity="right"
                    android:text="$0.00"
                    style="@style/TextViewCommom"
                    android:layout_alignTop="@+id/totalLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>



